testdata/existing.yaml
apiVersion: v1
items:
- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    annotations:
      kubernetes.io/ingress.class: istio
    name: match-cred
    namespace: default
  spec:
    tls:
    - hosts: ["alpha.example.com"]
      secretName: echo-cred
    rules:
    - host: alpha.example.com
      http:
        paths:
        - backend:
            serviceName: echo
            servicePort: 80
          path: /*
          pathType: ImplementationSpecific
- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    annotations:
      kubernetes.io/ingress.class: istio
    name: mismatch-cred
    namespace: default
  spec:
    tls:
    - hosts: ["beta.example.com"]
      secretName: something-else
    rules:
    - host: beta.example.com
      http:
        paths:
        - backend:
            serviceName: echo
            servicePort: 80
          path: /*
          pathType: ImplementationSpecific
- apiVersion: networking.istio.io/v1alpha3
  kind: Gateway
  metadata:
    name: istio-autogenerated-k8s-ingress
    namespace: gke-system
  spec:
    selector:
      istio: ingress-gke-system
    servers:
    - hosts:
      - '*'
      port:
        name: http
        number: 80
        protocol: HTTP2
    - hosts:
      - alpha.example.com
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        credentialName: echo-cred
        mode: SIMPLE
    - hosts:
      - beta.example.com
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        credentialName: echo-cred
        mode: SIMPLE
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
