testdata/host-conflict.yaml.golden
Gateway istio-autogenerated-k8s-ingress server for host service.com conflicts with another gateway
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: istio
  creationTimestamp: null
  name: http-only
  namespace: default
spec:
  rules:
  - host: service.com
    http:
      paths:
      - backend:
          serviceName: echo
          servicePort: 80
        path: /*
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - service.com
    secretName: secret
status:
  loadBalancer: {}

failures detected during execution
