testdata/input.yaml.golden
Gateway istio-autogenerated-k8s-ingress server for hosts [mtls.example.com] has unsupported TLS mode: MUTUAL
failed to find a matching HTTPS credential for http-only/foo.bar.not-matched.com; will be HTTP only
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: istio
  creationTimestamp: null
  name: http-only
  namespace: default
spec:
  rules:
  - host: foo.bar.not-matched.com
    http:
      paths:
      - backend:
          serviceName: echo
          servicePort: 80
        path: /*
        pathType: ImplementationSpecific
status:
  loadBalancer: {}

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: istio
  creationTimestamp: null
  name: ingress
  namespace: default
spec:
  rules:
  - host: echo.example.com
    http:
      paths:
      - backend:
          serviceName: echo
          servicePort: 80
        path: /*
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - echo.example.com
    secretName: echo-cred
status:
  loadBalancer: {}

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: istio
  creationTimestamp: null
  name: ingress2
  namespace: default
spec:
  rules:
  - host: httpbin.example.com
    http:
      paths:
      - backend:
          serviceName: httpbin
          servicePort: 80
        path: /*
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - httpbin.example.com
    secretName: star-example-cred
status:
  loadBalancer: {}

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: istio
  creationTimestamp: null
  name: wildcard
  namespace: default
spec:
  rules:
  - host: '*.example.com'
    http:
      paths:
      - backend:
          serviceName: echo
          servicePort: 80
        path: /*
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - '*.example.com'
    secretName: star-example-cred
status:
  loadBalancer: {}

failed to find a matching HTTPS credential for wildcard-to-explicit/*.other.com; will be HTTP only
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: istio
  creationTimestamp: null
  name: wildcard-to-explicit
  namespace: default
spec:
  rules:
  - host: '*.other.com'
    http:
      paths:
      - backend:
          serviceName: echo
          servicePort: 80
        path: /*
        pathType: ImplementationSpecific
status:
  loadBalancer: {}

conflicting TLS host for "wildcard2/default"; host "*.example.com" is the same as from "wildcard/default"; will be HTTP oonly
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: istio
  creationTimestamp: null
  name: wildcard2
  namespace: default
spec:
  rules:
  - host: '*.example.com'
    http:
      paths:
      - backend:
          serviceName: echo
          servicePort: 80
        path: /bar*
        pathType: ImplementationSpecific
status:
  loadBalancer: {}

failures detected during execution
