testdata/no-tls-443.yaml.golden
ERR02: Gateway istio-autogenerated-k8s-ingress server for hosts [*] has no TLS settings
ERR06: failed to find a matching HTTPS credential for http-only/foo.bar.not-matched.com; will be HTTP only
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: istio
  creationTimestamp: null
  name: http-only
  namespace: default
spec:
  rules:
  - host: foo.bar.not-matched.com
    http:
      paths:
      - backend:
          serviceName: echo
          servicePort: 80
        path: /*
        pathType: ImplementationSpecific
status:
  loadBalancer: {}

failures detected during execution
